# ChangeLog for net-www/apache
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/apache/ChangeLog,v 1.94 2004/01/20 09:53:09 robbat2 Exp $

  20 Jan 2004; Robin H. Johnson <robbat2@gentoo.org>
  files/2.0.48-r1/apache2.initd:
  fix bug #38787, remember to always update your conf.d files!
  
  19 Jan 2004; <tuxus@gentoo.org> apache-1.3.29-r1.ebuild:
  Added ~mips to KEYWORDS.

  17 Jan 2004; Robin H. Johnson <robbat2@gentoo.org>
  files/2.0.48-r1/apache2.initd:
  add some catches/warnings to .48-r2 init.d script

*apache-2.0.48-r3 (18 Jan 2004)

  18 Jan 2004; rob holland <tigger@gentoo.org> apache-2.0.48-r1.ebuild,
  apache-2.0.48-r3.ebuild, files/apache-2.0.48-export.diff:
  Added export patch to fix compilation on some boxes. #32588.
  Reported by marco@md2.ath.cx. Pointer from Chris Nott.

  14 Jan 2004; Robin H. Johnson <robbat2@gentoo.org> apache-1.3.27-r3.ebuild,
  apache-1.3.27-r4.ebuild, apache-1.3.28-r1.ebuild, apache-1.3.28.ebuild,
  apache-1.3.29-r1.ebuild, apache-1.3.29.ebuild, apache-2.0.46.ebuild,
  apache-2.0.47-r1.ebuild, apache-2.0.47.ebuild, apache-2.0.48-r1.ebuild,
  apache-2.0.48-r2.ebuild, apache-2.0.48.ebuild:
  fix bug #38040. cleanup all apache2 DEPENDS to block mips from ldap until they
  have openldap supported.

*apache-2.0.48-r2 (12 Jan 2004)

  12 Jan 2004; Robin H. Johnson <robbat2@gentoo.org> apache-2.0.48-r2.ebuild,
  files/2.0.48-r1/apache2.conf, files/2.0.48-r1/apache2.confd,
  files/2.0.48-r1/apache2.initd, files/2.0.48-r1/commonapache2.conf:
  change ServerRoot to /usr/lib/apache2 to get rid of all access to binaries via
  /etc. fix bug #37962 by improving the init/conf files.

  10 Jan 2004; <agriffis@gentoo.org> apache-1.3.29-r1.ebuild,
  apache-2.0.48-r1.ebuild:
  stable on ia64

  25 Dec 2003; Robin H. Johnson <robbat2@gentoo.org> apache-1.3.27-r3.ebuild,
  apache-1.3.27-r4.ebuild, apache-1.3.28-r1.ebuild, apache-1.3.28.ebuild,