@@ -1,12 +1,13 @@
 MD5 d172e61a4129d10e6f679543bc7595b1 apache-2.0.48.ebuild 11203
 MD5 da1c08c8716b9cc1449c4d2329963898 apache-2.0.48-r2.ebuild 12008
 MD5 9ccb266dd9f8ba601a66c8d8cf7bed96 apache-1.3.27-r3.ebuild 7652
+MD5 affb614fa6d8d56861db72c11f67c036 apache-2.0.48-r4.ebuild 12274
 MD5 d0008ca37363cd4cafd360564aad605b apache-2.0.47.ebuild 11472
 MD5 39da8853fb792d89c5f9504450233d8c apache-1.3.29.ebuild 7271
 MD5 852509a0a6174439a9430018f41e985d apache-1.3.29-r1.ebuild 7320
 MD5 b7737e1559b3508b5ba3dc679ae33537 apache-2.0.48-r1.ebuild 11662
 MD5 06ccd3b23e25f49dd7a0a473e039e2cb apache-2.0.48-r3.ebuild 12053
-MD5 ef2fd65a2a4901ea3da17c21c8990f89 ChangeLog 18609
+MD5 f924ae59e086d1b9065fc8de08180cf0 ChangeLog 18767
 MD5 270184fb43d56d5dad4223e467401a64 apache-1.3.28-r1.ebuild 7674
 MD5 bd80c41f0d8d92374c3712c4cac4d2ff metadata.xml 503
 MD5 3604262d4ff6e52fbbb35796df8cd865 apache-2.0.47-r1.ebuild 10758
@@ -26,6 +27,7 @@ MD5 78ec0e944bbdb4246ed75478e6d8e52a files/digest-apache-2.0.47-r1 65
 MD5 4cc91d25cf4117b8db0fec344bebec4d files/digest-apache-2.0.48-r1 65
 MD5 4cc91d25cf4117b8db0fec344bebec4d files/digest-apache-2.0.48-r2 65
 MD5 4cc91d25cf4117b8db0fec344bebec4d files/digest-apache-2.0.48-r3 65
+MD5 4cc91d25cf4117b8db0fec344bebec4d files/digest-apache-2.0.48-r4 65
 MD5 5dbbb01b1f4e39ff052a49389caa76ed files/apache-1.3.27_db4_gentoo.patch 956
 MD5 2c7dedfa1c3b2b815d733e90acfa06fc files/apache-2.0.48-export.diff 706
 MD5 43283cd264b5b1a6b3e5a4adba5ee2c1 files/apache-2.0.48-gentoo.diff 5905
