@@ -1,6 +1,11 @@
 # ChangeLog for net-www/apache
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/apache/ChangeLog,v 1.94 2004/01/20 09:53:09 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/apache/ChangeLog,v 1.95 2004/01/28 09:36:58 robbat2 Exp $
+
+*apache-2.0.48-r4 (28 Jan 2004)
+
+  28 Jan 2004; Robin H. Johnson <robbat2@gentoo.org> apache-2.0.48-r4.ebuild:
+  fix bug #39027 for old versions of portage.
 
   20 Jan 2004; Robin H. Johnson <robbat2@gentoo.org>
   files/2.0.48-r1/apache2.initd:
